--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+<meta charset='utf-8'>
+  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <meta name=viewport content="width=device-width, initial-scale=1">
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
-  <link rel="stylesheet" href="css/styles.css">
-   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
+  <link rel="stylesheet" href="css/styles.css" type="text/css">
+  <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB_xTwEzV3VWlQ3eagupTcrVpaXI84pC6w&libraries=places&callback=initMap"></script>
   <title>Restaurant Reviews</title>
