--- a/restaurant.html
+++ b/restaurant.html
@@ -18,11 +18,11 @@
   <header>
     <!-- Beginning nav -->
     <nav>
-      <h1><a href="/" aria-label="The Link to the Restaurant Reviews">Restaurant Reviews</a></h1>
+      <h1><a href="/" aria-label="Restaurant Reviews">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" >
-      <li><a href="/" aria-label="Link back Home">Home</a></li>
+    <ul id="breadcrumb" role="navigation">
+      <li><a href="/" aria-label="Home">Home</a></li>
     </ul>
    </header>
 
@@ -30,7 +30,7 @@
   <main id="maincontent">
     <!-- Beginning map -->
     <section id="map-container">
-      <div id="map"></div>
+      <div id="map" role="application"></div>
     </section>
 
     <!-- Beginning restaurant -->
