--- a/restaurant.html
+++ b/restaurant.html
@@ -15,13 +15,13 @@
 
 <body class="inside">
   <!-- Beginning header -->
-  <header>
+  <header role="navigation">
     <!-- Beginning nav -->
     <nav>
       <h1><a href="/" aria-label="Restaurant Reviews">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" role="navigation">
+    <ul id="breadcrumb">
       <li><a href="/" aria-label="Home">Home</a></li>
     </ul>
    </header>
