minor bug fixing
some issues with the h*tag

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
   </header>
 
 <!--main/-->
-  <main id="maincontent">
+  <main id="maincontent" role="main">
     <section id="map-container">
-      <div id="map"></div>
+      <div id="map" role="application"></div>
     </section>
     <section>
       <div class="filter-options">
