--- a/restaurant.html
+++ b/restaurant.html
@@ -15,13 +15,13 @@
 
 <body class="inside">
   <!-- Beginning header -->
-  <header role="navigation">
+  <header>
     <!-- Beginning nav -->
     <nav>
       <h1><a href="/" aria-label="Restaurant Reviews">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb">
+    <ul id="breadcrumb" role="navigation">
       <li><a href="/" aria-label="Home">Home</a></li>
     </ul>
    </header>
@@ -35,7 +35,7 @@
 
     <!-- Beginning restaurant -->
     <section id="restaurant-container">
-      <h1 id="restaurant-name"></h1>
+      <h2 id="restaurant-name"></h2>
       <img id="restaurant-img">
       <p id="restaurant-cuisine"></p>
       <p id="restaurant-address"></p>
@@ -49,6 +49,17 @@
  
   </main>
  
+   <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', function () {
+        navigator.serviceWorker.register('sw.js').then(function (registration) {
+          console.log('ServiceWorker registration successful with scope: ', registration.scope);
+        }, function (err) {
+          console.log('ServiceWorker registration failed: ', err);
+        });
+      });
+    }
+</script>
 
   <!-- Beginning footer -->
   <footer id="footer">
