--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <meta name=viewport content="width=device-width, initial-scale=1">
   <link src="//normalize-css.googlecode.com/svn/trunk/normalize.css" rel="stylesheet">
+  <meta name="theme-color" content="#892124"/>
+  <link rel="manifest" href="manifest.json">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
-  <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
-  <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB_xTwEzV3VWlQ3eagupTcrVpaXI84pC6w&libraries=places&callback=initMap"></script>
   <title>Restaurant Reviews</title>
 </head>
 
@@ -40,6 +39,10 @@
       <ul id="restaurants-list"></ul>
     </section>
   </main>
+
+ <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
+  <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB_xTwEzV3VWlQ3eagupTcrVpaXI84pC6w&libraries=places&callback=initMap"></script>
 
   <!--script/-->
  
