--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <!--main/-->
   <main id="maincontent" role="main">
     <section id="map-container">
-      <div id="map" role="application"></div>
+      <div id="map" role="application" aria-hidden="true" aria-describedby="map-help"></div>
     </section>
     <section>
       <div class="filter-options">
@@ -40,9 +40,10 @@
     </section>
   </main>
 
- <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
-  <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB_xTwEzV3VWlQ3eagupTcrVpaXI84pC6w&libraries=places&callback=initMap"></script>
+    <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
+    <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
+    <script type="application/javascript" charset="utf-8" src="node_modules/idb/lib/idb.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB_xTwEzV3VWlQ3eagupTcrVpaXI84pC6w&libraries=places&callback=initMap"></script>
 
   <!--script/-->
  
