--- a/index.html
+++ b/index.html
@@ -40,24 +40,13 @@
     </section>
   </main>
 
-    <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
-    <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
-    <script type="application/javascript" charset="utf-8" src="node_modules/idb/lib/idb.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB_xTwEzV3VWlQ3eagupTcrVpaXI84pC6w&libraries=places&callback=initMap"></script>
+    <script type="text/javascript" charset="utf-8" src="js/dbhelper.js"></script>
+    <script type="text/javascript" charset="utf-8" src="js/main.js"></script>
+    <script type="text/javascript" charset="utf-8" src="node_modules/idb/lib/idb.js"></script>
+    <script  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB_xTwEzV3VWlQ3eagupTcrVpaXI84pC6w&libraries=places&callback=initMap" async defer></script>
 
   <!--script/-->
  
-  <script>
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', function () {
-        navigator.serviceWorker.register('sw.js').then(function (registration) {
-          console.log('ServiceWorker registration successful with scope: ', registration.scope);
-        }, function (err) {
-          console.log('ServiceWorker registration failed: ', err);
-        });
-      });
-    }
-</script>
 
 <!--footer/-->
   <footer id="footer">
