added review form

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
       </div>
       <ul id="restaurants-list"></ul>
     </section>
+
+    <!-- end restaurant -->
+       
   </main>
 
     <script type="text/javascript" charset="utf-8" src="js/dbhelper.js"></script>
