--- a/restaurant.html
+++ b/restaurant.html
@@ -42,6 +42,35 @@
       <table id="restaurant-hours"></table>
     </section>
 
+     <!-- Beginning reviews -->
+    <section id="reviews-container">
+      <ul id="reviews-list"></ul>
+      <form id="reviewForm">
+        <p>
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="name" placeholder="Your Name" required/>
+        </p>
+        <p>&nbsp;</p>
+        <p>
+          <label for="rating">Rating</label>
+          <select name="rating">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+          </select>
+        </p>
+        <p>
+          <!-- <label for="reviewText">Review text:</label> -->
+          <textarea rows="4" name="comments" placeholder="Write your review here, but be nice..." required></textarea>
+        </p>
+        <p>
+          <input type="submit" value="Submit Review">
+        </p>
+      </form>
+    </section>
+
     <!-- Beginning reviews -->
     <section id="reviews-container">
       <ul id="reviews-list"></ul>
