--- a/restaurant.html
+++ b/restaurant.html
@@ -42,15 +42,17 @@
       <table id="restaurant-hours"></table>
     </section>
 
-     <!-- Beginning reviews -->
+     <!-- Beginning submit reviews -->
     <section id="reviews-container">
       <ul id="reviews-list"></ul>
       <form id="reviewForm">
         <p>
+        <h1>Please leave a review</h1>
+        </p>
+        <p>
           <label for="name">Name:</label>
           <input type="text" id="name" name="name" placeholder="Your Name" required/>
         </p>
-        <p>&nbsp;</p>
         <p>
           <label for="rating">Rating</label>
           <select name="rating">
@@ -62,11 +64,11 @@
           </select>
         </p>
         <p>
-          <!-- <label for="reviewText">Review text:</label> -->
+          <!-- Textfield -->
           <textarea rows="4" name="comments" placeholder="Write your review here, but be nice..." required></textarea>
         </p>
         <p>
-          <input type="submit" value="Submit Review">
+          <input type="submit" value="submit review">
         </p>
       </form>
     </section>
@@ -81,6 +83,7 @@
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB_xTwEzV3VWlQ3eagupTcrVpaXI84pC6w&libraries=places&callback=initMap"></script>
 <script type="text/javascript" src="js/dbhelper.js"></script>
 <script type="text/javascript" src="js/restaurant_info.js"></script>
+  <script type="application/javascript" charset="utf-8" src="js/sw_registration.js"></script>
 <script type="text/javascript" charset="utf-8" src="node_modules/idb/lib/idb.js"></script>
 
   <!-- Beginning footer -->
