--- a/restaurant.html
+++ b/restaurant.html
@@ -43,6 +43,20 @@
     </section>
 
      <!-- Beginning submit reviews -->
+ <!--  <script> 
+function show(revform) { 
+    if(document.getElementById) { 
+        var mydiv = document.getElementById(revform); 
+        mydiv.style.display = (mydiv.style.display=='block'?'none':'block'); 
+    } 
+} 
+</script> 
+<a href="" onclick="javascript:show('revform'); return false"> 
+Einblenden / Ausblenden</a> 
+<div style="display: none" id="revform">Text</div>
+
+<div id="revform">
+-->
     <section id="reviews-container">
       <ul id="reviews-list"></ul>
       <form id="reviewForm">
@@ -72,7 +86,7 @@
         </p>
       </form>
     </section>
-
+<!--</div>-->
     <!-- Beginning reviews -->
     <section id="reviews-container">
       <ul id="reviews-list"></ul>
