--- a/restaurant.html
+++ b/restaurant.html
@@ -34,12 +34,12 @@
     </section>
 
     <!-- Beginning restaurant -->
-    <section id="restaurant-container">
-      <h2 id="restaurant-name"></h2>
-      <img id="restaurant-img">
-      <p id="restaurant-cuisine"></p>
-      <p id="restaurant-address"></p>
-      <table id="restaurant-hours"></table>
+    <section id="restaurant-container" aria-label="Restaurant Info">
+      <h2 id="restaurant-name" aria-label="Restaurant Name"></h2>
+      <img id="restaurant-img" aria-label="Image of the Restaurant">
+      <p id="restaurant-cuisine" aria-label="Cuisine"></p>
+      <p id="restaurant-address" aria-label="Address"></p>
+      <table id="restaurant-hours" aria-label="opening times"></table>
     </section>
 
      <!-- Beginning submit reviews -->
@@ -57,8 +57,8 @@ Einblenden / Ausblenden</a>
 
 <div id="revform">
 -->
-    <section id="reviews-container">
-      <ul id="reviews-list"></ul>
+    <section id="reviewcontainer" aria-label="Reviews">
+      <ul id="reviewlist" aria-label="Review-list"></ul>
       <form id="reviewForm">
         <p>
         <h1>Please leave a review</h1>
@@ -69,7 +69,7 @@ Einblenden / Ausblenden</a>
         </p>
         <p>
           <label for="rating">Rating</label>
-          <select name="rating">
+          <select name="rating" aria-label="rating">
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -79,7 +79,7 @@ Einblenden / Ausblenden</a>
         </p>
         <p>
           <!-- Textfield -->
-          <textarea rows="4" name="comments" placeholder="Write your review here, but be nice..." required></textarea>
+          <textarea rows="4" name="comments" placeholder="Write your review here, but be nice..." required aria-label="Reviewfield"></textarea>
         </p>
         <p>
           <input type="submit" value="submit review">
