added favorite checkbox
changes in js will come soon

--- a/restaurant.html
+++ b/restaurant.html
@@ -35,7 +35,20 @@
 
     <!-- Beginning restaurant -->
     <section id="restaurant-container" aria-label="Restaurant Info">
+ <!--   	<form action=""> -->
       <h2 id="restaurant-name" aria-label="Restaurant Name"></h2>
+      <div class="tooltip">
+      <input  type="checkbox"> favorite
+      <span class="tooltiptext">click to mark this restaurant as your favorite</span>
+  </div>	
+      <!--
+      <input type="radio" name="Favorite" value="Favorite" class="tooltip">Favorite
+  <span class="tooltiptext">click to mark this restaurant as your favorite</span>
+</input>
+</form>
+-->
+
+<!--      <i class="far fa-grin-hearts"></i>   -->
       <img id="restaurant-img" aria-label="Image of the Restaurant">
       <p id="restaurant-cuisine" aria-label="Cuisine"></p>
       <p id="restaurant-address" aria-label="Address"></p>
