--- a/restaurant.html
+++ b/restaurant.html
@@ -38,7 +38,7 @@
  <!--   	<form action=""> -->
       <h2 id="restaurant-name" aria-label="Restaurant Name"></h2>
       <div class="tooltip">
-      <input  type="checkbox"> favorite
+      <input  type="checkbox" aria-label="Mark your favorite restaurant" tabindex="0"> favorite
       <span class="tooltiptext">click to mark this restaurant as your favorite</span>
   </div>	
       <!--
