performance up map down...

--- a/index.html
+++ b/index.html
@@ -18,11 +18,14 @@
   <header>
     <nav>
       <h1><a href="/" tabindex="-1">Restaurant Reviews</a></h1>
+      <h3 onclick="toggle_map()" aria-label="map on off">click me to see or hide the map</h3>
     </nav>
-  </header>
+   </header>
 
 <!--main/-->
+
   <main id="maincontent" role="main">
+
     <section id="map-container">
       <div id="map" role="application" aria-hidden="true" aria-describedby="map-help"></div>
     </section>
