--- a/restaurant.html
+++ b/restaurant.html
@@ -19,6 +19,7 @@
     <!-- Beginning nav -->
     <nav>
       <h1><a href="/" aria-label="Restaurant Reviews">Restaurant Reviews</a></h1>
+            <h3 onclick="toggle_map()" aria-label="map on off">click me to see or hide the map</h3>
     </nav>
     <!-- Beginning breadcrumb -->
     <ul id="breadcrumb" role="navigation" aria-label="Breadcrumb">
